// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<PickitemMultiselect /> basic example 1`] = `
<div
  className="xui-pickitem--body"
  role="presentation"
>
  <div
    className="xui-pickitem-multiselect--checkbox xui-styledcheckboxradiowrapper xui-styledcheckboxradio-small"
  >
    <label
      className="xui-styledcheckboxradio"
      onClick={[Function]}
      role="presentation"
    >
      <input
        aria-labelledby="testPickitemCheckboxId"
        className="xui-styledcheckboxradio--input xui-styledcheckboxradio--input-small"
        defaultChecked={false}
        disabled={false}
        onChange={[Function]}
        required={false}
        tabIndex={-1}
        type="checkbox"
      />
      <div
        className="xui-styledcheckboxradio--checkbox xui-pickitem--input xui-styledcheckboxradio--checkbox-small"
      >
        <div
          className="xui-touchtarget"
        />
      </div>
      <span
        className="xui-styledcheckboxradio--label xui-styledcheckboxradio--label-small xui-pickitem--text xui-pickitem-multiselect--label"
        id="testPickitemCheckboxId"
      >
        <span
          className=""
        >
          Item
        </span>
      </span>
    </label>
  </div>
</div>
`;

exports[`<PickitemMultiselect /> is selected, adds truncation and custom classes 1`] = `
<div
  className="xui-pickitem--body"
  role="presentation"
>
  <div
    className="custom-checkbox xui-pickitem-text-truncated xui-pickitem-multiselect--checkbox xui-styledcheckboxradiowrapper xui-styledcheckboxradio-small"
  >
    <label
      className="xui-styledcheckboxradio"
      onClick={[Function]}
      role="presentation"
    >
      <input
        aria-labelledby="testPickitemCheckboxId"
        checked={true}
        className="xui-styledcheckboxradio--input xui-styledcheckboxradio--input-small"
        disabled={false}
        onChange={[Function]}
        required={false}
        tabIndex={-1}
        type="checkbox"
      />
      <div
        className="xui-styledcheckboxradio--checkbox xui-pickitem--input xui-styledcheckboxradio--checkbox-small"
      >
        <div
          className="xui-touchtarget"
        />
      </div>
      <span
        className="xui-styledcheckboxradio--label xui-styledcheckboxradio--label-small xui-pickitem--text xui-pickitem-multiselect--label xui-pickitem-text-truncated"
        id="testPickitemCheckboxId"
      >
        <span
          className="xui-pickitem-text-truncated"
        >
          <span
            className="xui-pickitem-text-truncated"
          >
            Item
          </span>
        </span>
      </span>
    </label>
  </div>
</div>
`;
